crates/loom/tests/snapshots/cli_help__loom_use_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"use\"])"
---
Validate that a spec label exists in the cache

Usage: loom use [OPTIONS] <LABEL>

Arguments:
  <LABEL>  Spec label (matches `<workspace>/specs/<label>.md`)

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
      --host-key          Explicitly allow ambient host Git credentials and signing config
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
  -h, --help              Print help
